# BioAmplify

./: README.md
BioAmpCompare/: pyproject.toml  requirements.txt
